2010-06-26  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSObject.m: Remove the Object(NSObjectCompat) category as the
	use ogf the Object class is *really* obsolete, and also there appears
	to be an objc runtime bug whaich adds the category methods to NSZombie
	even though NSZombie is not a subclass of Object.

2010-06-25  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSURL.m: Implement keyed coding
	* Source/NSBundle.m: When fetching a localised resource for a specific
	language, ignore the language list in the user preferences, and just
	look for that language asn for unlocalised data.

2010-06-25  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSKeyedArchiver.m:
	* Source/NSKeyedUnarchiver.m:
	Implement NSInteger methods and add range checking when decoding.

2010-06-25  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSLocale.m
	* Headers/Additions/GNUstepBase/config.h.in
	* config/icu.m4
	* configure.ac
	* configure
	* config.mak.in
	Autoconf support for ICU

2010-06-25  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/Foundation.h: add NSLocale
	* Headers/Foundation/NSLocale.h: rewrite/document
	* Source/GNUmakefile: add NSLocale
	* Source/NSLocale.m: fixup headers and disable temporarily (so that
	base will still build)

2010-06-25  Stef Bidi <stefanbidi@gmail.com>

	* Headers/Foundation/NSLocale.h
	* Source/NSLocale.m
	Partial NSLocale implementation wrapping ICU

2010-06-23  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSBundle.m: When looking up paths, if no extension is provided
	then try to obtain it from the name.  Mimics OSX behavior.

2010-06-22  David Wetzel <dave@turbocat.de>

	* Headers/Foundation/NSFileManager.h
	* Source/NSFileManager.m
	add attributesOfItemAtPath:error:
	
2010-06-22  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Additions/GNUstepBase/GSVersionMacros.h:
	Include header for ObjC2 blocks support if the compiler had that.

2010-06-20  Richard Frith-Macdonald <rfm@gnu.org>

        * Version 1.21.1
